# Test

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_COVERAGE_REVIEW.md  CONTRIBUTING.md  COVERAGE_IMPROVEMENT_PLAN.md  COVERAGE_REPORT_README.md  COVERAGE_REVIEW_SUMMARY.md  DEPLOYMENT_VERIFIED.md  DEPRECATION.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  MANUAL_MAPPING_GUIDE.md  MIGRATION.md  NEXT_SESSION.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PHASE_3D_COMPLETE.md  PHASE_3_4_COMPLETE.md  PHASE_4_MYPY_COMPLETE.md  README.md  README_AURA_IMPORT.md  README_IMPORT.md  TYPE_ANNOTATION_REVIEW.md  TYPE_REVIEW_SUMMARY.md  UV_GUIDE.md  adaptive_difficulty.py  advanced_context_augmentation.py  auto_extract_examples.py  balance_examples.py  blackwater.csv  blackwater.txt  cache_stats.jsonl  caching_layer.py  check_failures.py  check_neo4j_rules.py  check_neo4j_summary.py  compare_documents.py  (+76 more)
.cache/: context_cache.json
.github/: copilot-instructions.md  dependabot.yml
.sonar/: report-task.txt
artifacts/: coverage_test_report.md
checks/: __init__.py  check_neo4j_rules.py  check_neo4j_summary.py  detect_forbidden_patterns.py  validate_session.py
config/: development.env  feature_flags.json  grafana_dashboard.json  patterns.yaml
configs/: minimal.env  production.env  staging.env
devplan/: PROMPT-002-plan.md  Project_Evaluation_Report.md  Project_Improvement_Exploration_Report.md  Prompt.md  Session_History.md  back.md  housekeeping.md
docs/: ADVANCED_FEATURES.md  API.md  ARCHITECTURE.md  BACKEND_REFACTORING.md  BRANCH_CLEANUP_STATUS.md  BREAKING_CHANGES_v3.md  CACHING.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT_VERIFIED.md  DEPRECATION.md  Data2Neo_Integration_Report.md  ENDPOINT_ANALYSIS_SUMMARY.md  ENVIRONMENT_SETUP.md  FRONTEND_INTEGRATION.md  GETTING_STARTED.md  GOpt_Integration_Report.md  HOW_TO_USE_WEB_LOGGING.md  IMPROVEMENTS.md  IMPROVEMENT_PROPOSAL.md  LATS_GUIDE.md  MONITORING.md  MYPY_LEVEL2_BEST_PRACTICES.md  MYPY_LEVEL3_REPORT.md  MYPY_STRICT_GUIDE.md  Makefile  PRINCIPLES_REVIEW.md  PROMPT_IMPROVEMENTS.md  README_FULL.md  SECURITY.md  TROUBLESHOOTING.md  TROUBLESHOOTING_422_ERRORS.md  TROUBLESHOOTING_TRUNCATED_RESPONSES.md  UV_GUIDE.md  V3_SHIM_REMOVAL_ISSUE.md  VALIDATION_EXAMPLES.md  WEB_API_ENDPOINTS.md  conf.py  guide_mapping.md  index.rst  (+8 more)
examples/: context_calc_used.json  context_low_text.json  csv_validation_usage.py  demo_web_logging.py  sample_image_meta.json  session_input_low_density.json  session_input_with_table.json  workspace_executor_usage.py
experiments/: __init__.py  ab_testing.py  runner.py
guide/: [텍스트 이미지 QA] 작업 가이드 2ab5bc53234881aabe6fe66bde778b41.html
notion-neo4j-graph/: README.md  compare_documents.py  import_pipeline.py  main.py  pyproject.toml  semantic_analysis.py  test_all_connections.py  test_neo4j_connection.py  test_notion_connection.py  verify_import.py  verify_topics.py
qna/: [텍스트 이미지 QA] 자주 들어오는 질문 2955bc53234881f69cc0da7786d10046.html
scripts/: __init__.py  add_bold_constraint.py  analyze_extra_constraints.py  analyze_manual_mapping.py  analyze_markdown_rules.py  apply_all_constraints.py  apply_all_mappings.py  apply_explanation_constraints.py  apply_formatting_constraints.py  apply_reasoning_constraints.py  apply_target_long_constraints.py  apply_target_short_constraints.py  auto_profile.py  backup.ps1  backup.py  benchmark.py  build_release.py  build_session.py  cache_warming.py  check_database_status.py  check_db_simple.py  check_deprecated_imports.py  check_docstrings.py  check_mypy_baseline.py  check_neo4j_constraints.py  check_no_type_check.py  check_qtype_mapping.py  check_test_types.py  compare_runs.py  consolidate_target.py  count_mappings.py  count_rels.py  daily_improvement_check.sh  debug_api_response.py  debug_descendants.py  debug_headings.py  debug_neo4j.py  debug_order.py  debug_rules.py  deprecation_stats.py  (+60 more)
src/: __init__.py  _deprecation.py  action_executor.py  adaptive_difficulty.py  advanced_context_augmentation.py  agent.py  budget_tracker.py  cache_analytics.py  caching_layer.py  cli.py  compare_documents.py  config.py  constants.py  cross_validation.py  custom_callback.py  data_loader.py  dynamic_example_selector.py  dynamic_template_generator.py  exceptions.py  gemini_model_client.py  graph_enhanced_router.py  graph_schema_builder.py  health_check.py  integrated_qa_pipeline.py  integrated_quality_system.py  lats_searcher.py  lcel_optimized_chain.py  list_models.py  logging_setup.py  main.py  memory_augmented_qa.py  models.py  multi_agent_qa_system.py  multimodal_understanding.py  neo4j_utils.py  qa_generator.py  qa_rag_system.py  qa_system_factory.py  real_time_constraint_enforcer.py  redis_eval_cache.py  (+6 more)
static/: ConfigEditor.ts  LogViewer.ts  README.md  app.js  app.ts  eval.js  eval.ts  ocr.ts  qa.js  qa.ts  style.css  utils.js  utils.ts  validation.ts  workspace.ts
templates/: prompt_entity_extraction.j2  prompt_eval.j2  prompt_query_gen.j2  prompt_rewrite.j2  rewrite_user.j2
tests/: __init__.py  conftest.py  custom_types.py  test_ab_test.py  test_adaptive_difficulty.py  test_additional_coverage.py  test_advanced_context_augmentation.py  test_advanced_context_augmentation_more.py  test_agent.py  test_agent_additional.py  test_agent_budget.py  test_agent_cache.py  test_agent_cost_logging.py  test_agent_coverage.py  test_agent_errors_remaining.py  test_agent_extended.py  test_agent_more_coverage.py  test_agent_rate_limit.py  test_agent_resilience.py  test_analysis_coverage.py  test_batch_processor.py  test_budget_qarag_worker.py  test_cache_analytics.py  test_cache_analytics_additional.py  test_cache_stats.py  test_cache_threshold.py  test_cache_ttl_policy.py  test_caching_analytics.py  test_caching_init_coverage.py  test_caching_layer.py  test_caching_layer_coverage.py  test_chain_systems.py  test_chunk_processor.py  test_config_validation.py  test_config_validator_coverage.py  test_context_augmentation_coverage.py  test_context_augmentation_extended.py  test_core_adapters.py  test_coverage_branches_additional.py  (+92 more)
(+592 files in other folders)
