[project]
name = "shining-quasar"
version = "3.0.0"
description = "Enterprise-grade workflow system for evaluating and rewriting Q&A responses using Google Gemini AI."
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
    # Core dependencies - always required
    "google-generativeai>=0.8.3,<1.0.0",
    "python-dotenv>=1.0.1",
    "aiofiles>=23.2.1",
    "pydantic>=2.0.0",
    "tenacity>=8.2.0",
    "pydantic-settings>=2.0.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
    "aiolimiter>=1.1.0",
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
# RAG system with Neo4j and LangChain
rag = [
    "langchain>=1.0.8,<2.0.0",
    "langchain-community>=0.4.1,<1.0.0",
    "langchain-neo4j>=0.6.0,<1.0.0",
    "langchain-openai>=1.0.3,<2.0.0",
]

# Web UI with FastAPI
web = ["fastapi>=0.115.0", "uvicorn>=0.32.0", "python-multipart>=0.0.12"]

# Redis worker for LATS
worker = ["faststream[redis]>=0.4.10,<1.0.0"]

# Multimodal (image processing)
multimodal = ["pillow>=10.0.0", "pytesseract>=0.3.10"]

# All optional features - list individual packages, not self-reference
all = [
    "langchain>=1.0.8,<2.0.0",
    "langchain-community>=0.4.1,<1.0.0",
    "langchain-neo4j>=0.6.0,<1.0.0",
    "langchain-openai>=1.0.3,<2.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.12",
    "faststream[redis]>=0.4.10,<1.0.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.12",
]

# Development and testing (includes all optional deps for type checking)
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-sugar>=1.0.0",
    "pytest-watcher>=0.4.0",
    "pytest-xdist>=3.6.0",
    # Linting and formatting
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.6.0",
    "vulture>=2.11",
    "autoflake>=2.3.0",
    # Security scanning
    "bandit>=1.7.0",
    "safety>=3.0.0",
    # Documentation
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    # Profiling
    "memory-profiler>=0.61",
    # Type stubs
    "types-aiofiles>=24.1.0.20240410",
    "types-redis>=4.6.0",
    "types-jinja2>=2.11.0",
    "types-pillow>=10.0.0",
    # Include all optional deps for type checking in CI
    "langchain>=1.0.8,<2.0.0",
    "langchain-community>=0.4.1,<1.0.0",
    "langchain-neo4j>=0.6.0,<1.0.0",
    "langchain-openai>=1.0.3,<2.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.12",
    "faststream[redis]>=0.4.10,<1.0.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
]

[project.scripts]
migrate-imports = "scripts.migrate_imports:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "scripts", "checks"]

[tool.ruff]
fix = true
unsafe-fixes = false
exclude = ["vulture_whitelist.py"]

[tool.ruff.lint]
extend-select = ["PERF", "FURB", "SIM", "D"]
ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D105",   # Missing docstring in magic method
    "D107",   # Missing docstring in __init__
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
"scripts/**" = [
    "PERF401",
    "PERF203",
    "SIM102",
    "D",
] # Allow simpler patterns in scripts
"experiments/**" = [
    "PERF401",
    "PERF203",
    "SIM102",
    "D",
] # Allow simpler patterns in experiments
"src/plugins/**" = ["PERF203"] # Allow try-except in loops for plugin loading
"src/workflow/chunk_processor.py" = [
    "PERF203",
] # Allow try-except in retry loops

[tool.mypy]
python_version = "3.10" # v3.0: Minimum supported version

# Level 3: Strict mode enabled
strict = true
ignore_missing_imports = false

# Additional strict checks for code quality
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
no_implicit_optional = true

# Pydantic plugin for better type checking
plugins = ["pydantic.mypy"]

namespace_packages = true
explicit_package_bases = true
mypy_path = [".", "stubs"]
exclude = [
    "notion-neo4j-graph/",
    ".venv/",
    "build/",
    "vulture_whitelist.py",
    "tests/unit/migration/test_deprecation_warnings.py",
]

# ===== 테스트 파일 mypy strict mode 완료 =====
# test_deprecation_warnings.py는 의도적으로 제외 (삭제된 모듈 테스트)

# Strict mode 통과 파일들 (전체 마이그레이션 완료)
# 테스트 파일들은 tests/, tests/unit/, tests/integration/, tests/e2e/로 구조화됨
[[tool.mypy.overrides]]
module = ["tests", "tests.*"]
strict = true

# Scripts, checks, and experiments excluded from strict mode
[[tool.mypy.overrides]]
module = ["scripts.*", "checks.*", "experiments.*"]
strict = false
check_untyped_defs = false
warn_return_any = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_any_generics = false
disallow_untyped_calls = false

# External libraries without type stubs (permanent exceptions)
[[tool.mypy.overrides]]
module = [
    "google.generativeai",
    "google.generativeai.*",
    "google.ai.generativelanguage_v1beta.*",
    "tenacity",
    "tenacity.*",
    "aiolimiter",
    "aiolimiter.*",
    "pytesseract",
    "pytesseract.*",
    "prometheus_client",
    "prometheus_client.*",
    "psutil",
    "psutil.*",
    "neo4j",
    "neo4j.*",
    "openai",
    "openai.*",
    "faststream",
    "faststream.*",
    "dotenv",
    "dotenv.*",
    "redis",
    "redis.*",
    "PIL",
    "PIL.*",
    "fastapi",
    "fastapi.*",
    "langchain_core",
    "langchain_core.*",
]
ignore_missing_imports = true

# Worker module uses FastStream decorators which are untyped
[[tool.mypy.overrides]]
module = ["src.infra.worker"]
disallow_untyped_decorators = false

# Health module uses redis.asyncio.from_url which may be untyped without types-redis
[[tool.mypy.overrides]]
module = ["src.infra.health"]
disallow_untyped_calls = false

# Test file that intentionally tests import failures for removed modules
[[tool.mypy.overrides]]
module = ["tests.unit.migration.test_deprecation_warnings"]
ignore_missing_imports = true

# Langchain modules (use custom stubs + relaxed rules)
[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langchain_community.*",
    "langchain_neo4j.*",
    "langchain_openai.*",
]
ignore_missing_imports = true
disallow_untyped_calls = false
disallow_any_generics = false

[tool.uv.workspace]
members = ["notion-neo4j-graph"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.pytest.ini_options]
# Deprecation 경고 필터링 전략
filterwarnings = [
    # 기본: 모든 경고를 에러로 취급 (엄격 모드)
    "error",

    # 외부 라이브러리 경고는 무시 (일시적)
    "ignore::DeprecationWarning:google.*",
    "ignore::DeprecationWarning:langchain.*",
    "ignore::DeprecationWarning:fastapi.*",
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::DeprecationWarning:neo4j.*",
    "ignore::DeprecationWarning:tenacity.*",

    # google.api_core Python 버전 지원 경고 무시 (DeprecationWarning 및 FutureWarning)
    "ignore:.*Python 3.10.*:DeprecationWarning",
    "ignore:.*support for Python 3.10.*:DeprecationWarning",
    "ignore:.*Python 3.10.*:FutureWarning",
    "ignore:.*support for Python 3.10.*:FutureWarning",

    # 우리 코드 내 의도적 deprecation 테스트용 경고는 무시
    "ignore:Importing.*from 'src' is deprecated:DeprecationWarning",

    # PendingDeprecationWarning은 모니터링만
    "default::PendingDeprecationWarning",

    # 특정 알려진 경고 무시
    "ignore:datetime.datetime.utcnow\\(\\) is deprecated:DeprecationWarning",
    "ignore:Relying on Driver's destructor to close the session is deprecated:DeprecationWarning",

    # pytest 특수 경고 무시 (리소스 정리 관련)
    "ignore::pytest.PytestUnraisableExceptionWarning",

    # runpy 관련 알려진 경고 (테스트 환경)
    "ignore:.*found in sys.modules after import.*:RuntimeWarning",
]

# E2E 테스트 마커 설정
markers = [
    "e2e: End-to-end integration tests (deselect with '-m \"not e2e\"')",
    "slow: Tests that take > 5 seconds (deselect with '-m \"not slow\"')",
    "requires_redis: Tests requiring Redis connection",
    "requires_neo4j: Tests requiring Neo4j connection",
]

# E2E 테스트는 기본적으로 제외 (명시적으로 실행)
addopts = "-m 'not e2e'"

[dependency-groups]
dev = ["pre-commit>=4.4.0"]
